--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,9 +2,9 @@
 layout: archive
 ---
 
-<h3>Logesh G</h3>
-<h4>Student</h4>
+<h4>My works</h4>
+
 <div>
-  <p>Hi I am Logesh G, a 3'rd year undergrad studying Computer Science in Bannari Amman Institute of Technology.</p>
   <p>I like building robots!!! &#129302; </p>
+  <p>I work on robotic manipulators and robot visual perception systems</p>
 </div>
