--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,9 +5,25 @@ search: false
 
 @charset "utf-8";
 
+
+/*
+   Typography
+   ========================================================================== */
+$serif              : "PT Serif", Georgia, Times, serif;
+$sans-serif         : "PT Sans", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
+$sans-serif-narrow  : "PT Sans Narrow", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
+
+$global-font-family : $serif;
+$header-font-family : $sans-serif-narrow;
+$caption-font-family: $serif;
+
+@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
+@import "minimal-mistakes"; // main partials
+
+
 /*
    Author profile, sidebar and links
-   ========================================================================== */
+   ========================================================================== 
 .sidebar {
    @include breakpoint($large) {
 
@@ -26,13 +42,26 @@ search: false
       font-style: italic;
    }
 }
-
+*/
 .author__avatar img {
     max-width: 150px;
     border-radius: 50%;
 }
 
-.adj-academicicons, .fa-brands {
-   text-align: center;
-   width: 1.25em;
+// .adj-academicicons, .fa-brands {
+//    text-align: center;
+//    width: 1.25em;
+// }
+
+
+
+/*
+   Other
+   ========================================================================== 
+.cv-pics {
+    margin: 0 auto;
+    display: block;
+    max-width:100px;
+    height:auto;
 }
+*/
