--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,18 +5,6 @@ search: false
 
 @charset "utf-8";
 
-
-/*
-   Typography
-   ========================================================================== */
-$serif              : "PT Serif", Georgia, Times, serif;
-$sans-serif         : "PT Sans", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
-$sans-serif-narrow  : "PT Sans Narrow", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
-
-// $global-font-family : $serif;
-// $header-font-family : $sans-serif-narrow;
-// $caption-font-family: $serif;
-
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
@@ -44,8 +32,12 @@ $sans-serif-narrow  : "PT Sans Narrow", -apple-system, BlinkMacSystemFont, "Robo
 }
 */
 .author__avatar img {
-    max-width: 150px;
+    max-width: 160px;
     border-radius: 50%;
+    @include breakpoint($large) {
+      padding: 0px;
+      border: 1px solid $border-color;
+    }
 }
 
 // .adj-academicicons, .fa-brands {
